RESOLVED FIXED153238
outline-offset does not work for inlines.
https://bugs.webkit.org/show_bug.cgi?id=153238
Summary outline-offset does not work for inlines.
alan
Reported 2016-01-19 10:35:22 PST
right/bottom edges are not getting the offsets.
Attachments
Patch (4.68 KB, patch)
2016-01-19 11:06 PST, alan
no flags
Patch (4.68 KB, patch)
2016-01-19 11:13 PST, alan
no flags
alan
Comment 1 2016-01-19 11:06:00 PST
alan
Comment 2 2016-01-19 11:09:01 PST
it's only broken for outline style != auto (focusing painting works)
Simon Fraser (smfr)
Comment 3 2016-01-19 11:10:18 PST
Comment on attachment 269273 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=269273&action=review > LayoutTests/fast/inline/inline-with-outline-offset-expected.html:4 > +<title>This test that outline-offset is applied properly on inline elements</title> ...tests that > LayoutTests/fast/inline/inline-with-outline-offset.html:4 > +<title>This test that outline-offset is applied properly on inline elements</title> ...tests that
alan
Comment 4 2016-01-19 11:13:49 PST
WebKit Commit Bot
Comment 5 2016-01-19 12:32:13 PST
Comment on attachment 269274 [details] Patch Clearing flags on attachment: 269274 Committed r195306: <http://trac.webkit.org/changeset/195306>
WebKit Commit Bot
Comment 6 2016-01-19 12:32:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.