outline-offset does not work for inlines. https://bugs.webkit.org/show_bug.cgi?id=153238

Reviewed by Simon Fraser.

Adjust outline box width/height with outline-offset.

Test: fast/inline/inlines-with-outline-offset.html

Source/WebCore:

* rendering/RenderInline.cpp:
(WebCore::RenderInline::paintOutline):
(WebCore::RenderInline::paintOutlineForLine):

LayoutTests:

* fast/inline/inlines-with-outline-offset-expected.html: Added.
* fast/inline/inlines-with-outline-offset.html: Added.


Canonical link: https://commits.webkit.org/171316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195306 268f45cc-cd09-0410-ab3c-d52691b4dbfc